--- a/thongtinnhuongquyen.html
+++ b/thongtinnhuongquyen.html
@@ -22,8 +22,8 @@
     <!-- style -->
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" />
     <link rel="stylesheet" href="assets/css/thongtinnhuongquyen.css">
+    <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
     <div id="app">
@@ -125,7 +125,7 @@
       <div class="content">
         <div class="container">
        <div class="page-franchise"><h2>Thông tin nhượng quyền</h2>
-        <div class="f-inner"><div class="f-left"><p><img class="img-fluidb img-banner" src="assets/img/img-detail/unnamed.png" alt=""></p>
+        <div class="f-inner"><div class="f-left"><p><img class="img-fluidb img-banner" src="assets/img/canale-food-network-italia.jpg" alt=""></p>
             <p>Food network có mặt tại thị trường Việt Nam từ năm 2000 và cho đến nay đang là một trong những thương hiệu dẫn đầu ngành công nghiệp ăn uống quốc nội với 20 nhà hàng với 22 tỉnh/thành trên cả nước.</p>
             <p>Thị trường Việt Nam được đánh giá là một trong những thị trường có tiềm năng lớn trong việc phát triển ngành thực phẩm . Với mong muốn phát triển bền vững và củng cố vị thế hàng đầu của mình ở thị trường sôi động này, từ tháng 10.2014, Food network bắt đầu nhượng quyền thương hiệu để hợp tác cùng phát triển với các đối tác trên toàn quốc.</p>
             <p>Nếu quý anh/chị có nhu cầu tham gia nhượng quyền thương hiệu Food network,  anh/chị có thể để lại thông tin ngay bên cạnh hoặc liên hệ qua <a href="#"><strong >có số đâu mà gọi</strong></a> để chúng tôi có thể chủ động liên hệ lại với anh/chị.</p>
